--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-font_family Monoid Regular Nerd Font Complete Mono
-bold_font Monoid Bold Nerd Font Complete Mono
-italic_font Monoid Italic Nerd Font Complete Mono
+font_family Monoid Regular Nerd Font Complete
+bold_font Monoid Bold Nerd Font Complete
+italic_font Monoid Italic Nerd Font Complete
 
 font_size 10.0
 
